# calorie_calculator_flask

./: README.md  main.py  pyproject.toml
templates/: index.html
